--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   height: 40vmin;
   pointer-events: none;
 }
+.container{
+  display: flex;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
